Revert splitter usage and fix unneeded horizontal scrollbar inside listviews

--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,14 @@ body {
     margin: 0 auto;
 }
 
+#shoppingListView,
+#pickedItemsListView{
+/*    overflow-y: scroll;*/
+    /* There is a margin value of -1em which causes horizontal scrollbar to appear after adding the splitter so overwrite
+    its value to zero*/
+    margin: 0 !important;
+}
+
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
